tests/errors/continue-outside-loop.ari
fn main() -> i64 {
  continue;
  return 0;
}
